# xy_web_server

./: .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/test_web_server/config/: xy_web.toml
samples/test_web_server/source/Runner/: Runner.py
samples/xy_web_demo/config/: xy_web.toml  xy_web_work.toml
samples/xy_web_demo/source/Runner/: Runner.py
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/config/: xy_web_work.toml
samples/xy_web_server_demo/source/Runner/: Runner.py  utils.py
samples/xy_web_server_demo/source/Runner/Admin/: db.sqlite3  manage.py
test/test_demo/config/: xy_web.toml
test/test_demo/source/Runner/: Runner.py
xy_web_server/: ModuleData.py  WebServerWork.py  Work.py  __init__.py
xy_web_server/Backup/: Backup.py
xy_web_server/Database/Connector/Mysql/: Mysql.py
xy_web_server/Database/Connector/Sqlite/: Sqlite.py
xy_web_server/Database/Sql/: Sql.py
xy_web_server/Log/: Log.py
xy_web_server/Server/: Server.py
xy_web_server/Server/Django/: Django.py
xy_web_server/Server/Nginx/: Nginx.py  __init__.py
xy_web_server/Server/Tornado/: Tornado.py
xy_web_server/Server/Uwsgi/: Uwsgi.py
xy_web_server/Settings/: Settings.py
xy_web_server/Settings/Section/: Django.py  Nginx.py  Section.py  Tornado.py  Uwsgi.py
xy_web_server/data/template/config/: xy_web_server_toml.template
xy_web_server/data/template/runner/: runner_py.template
xy_web_server/execute/: Main.py
(+11 files in other folders)
